# one-api-to-rule-them-all

./: Dockerfile  heroku.yml  pyproject.toml  requirements.txt
api/: settings.py  urls.py
art/: models.py  serializers.py  urls.py  views.py
art/migrations/: 0001_initial.py
static/: staticfiles.json
